--- a/bibliography.bib
+++ b/bibliography.bib
@@ -824,6 +824,16 @@ Vision and Pattern Recognition},
    type = {Conference Proceedings}
 }
 
+@article{Sana,
+	author = {Xie, Enze and Chen, Junsong and Chen, Junyu and Cai, Han and Tang, Haotian and Lin, Yujun and Zhang, Zhekai and Li, Muyang and Zhu, Ligeng and Lu, Yao},
+	title = {Sana: Efficient high-resolution image synthesis with linear diffusion transformers},
+	journal = {arXiv preprint arXiv:2410.10629},
+	year = {2024},
+	type = {Journal Article}
+}
+
+
+
 @article{Anderson,
    author = {Anderson, Brian DO},
    title = {Reverse-time diffusion equation models},
