--- a/glossary.tex
+++ b/glossary.tex
@@ -46,6 +46,14 @@
 	description={Convolutional Neural Network}
 }
 
+
+\newglossaryentry{MC}
+{
+	name=MC,
+	description={Markov Chain}
+}
+
+
 \newglossaryentry{ViT}
 {
 	name=ViT,
