--- a/theory_diffusion_models.tex
+++ b/theory_diffusion_models.tex
@@ -1,15 +1,17 @@
-\section{Diffusion Models}
+\section{Diffusion Models and Flow Matching}
 \label{sec:diffModel}
-Diffusion models \cite{DiffusionModelIntroPaper, DDPM, DDIM, LDM, SGM, SDE} are probabilistic generative models  that have achieved remarkable success in image generation tasks \cite{Flux, HiDream} demonstrating exceptional performance in terms of image quality and image diversity. While they require significant computational resources and have slower inference compared to some alternatives \cite{VAE, NormalizingFlow, GAN}, they have become the dominant generative modeling paradigm in the research community.
-The main principals of diffusion models are reflected in two processes motivated by principles of non-equilibrium thermodynamics, namely the forward process and the reverse process. In the forward process, the original images are gradually perturbed by systematically adding Gaussian noise until pure noise is left. The reverse process describes the iterative noise removal by the diffusion model until a clean image is obtained. During image generation by a diffusion model, one starts from randomly sampled noise and applies the diffusion model iteratively, progressively denoising at each step. The repeated application gradually produces a clean, high-quality image. \\
+Diffusion models \cite{DiffusionModelIntroPaper, DDPM, DDIM, LDM, SGM, SDE} are probabilistic generative models  that have achieved remarkable success in image generation tasks \cite{Flux, HiDream}, demonstrating exceptional performance in terms of image quality and image diversity. While they require significant computational resources and have slower inference compared to some alternatives \cite{VAE, NormalizingFlow, GAN}, they have become the dominant generative modeling paradigm in the research community.
+The main principles of diffusion models are reflected in two processes motivated by non-equilibrium thermodynamics, namely the forward process and the reverse process. In the forward process, the original images are gradually perturbed by systematically adding Gaussian noise until only pure noise is left. The reverse process describes the iterative noise removal by the diffusion model until a clean image is obtained. During image generation with a diffusion model, one starts from randomly sampled noise and applies the diffusion model iteratively, progressively denoising at each step. This repeated application gradually produces a clean, high-quality image. \\
+Over time, several different formulations of diffusion models were proposed. However, there are three dominant formulations recognized in the literature \cite{SurveyDM}: Denoising diffusion probabilistic models (\gls{DDPM}s) \cite{DiffusionModelIntroPaper, DDPM}, score-based generative models (\gls{SGM}s) \cite{SGM} and stochastic differential equations (\gls{SDE}s) \cite{SDE}. \\
 
-\subsection{Foundations of Diffusion Models}
-Over time, several different formulations of diffusion models were proposed. However, there are three dominant formulations recognized in the literature \cite{SurveyDM}: Denoising diffusion probabilistic models (\gls{DDPM}s) \cite{DiffusionModelIntroPaper, DDPM}, score-based generative models (\gls{SGM}s) \cite{SGM} and stochastic differential equations (\gls{SDE}s) \cite{SDE}. Recently, in models like Flux-dev \cite{Flux}, a different formulation called rectified flow matching \cite{RectifiedFlowMatching, FlowMatching} emerged. In the following, all four formulations are presented, whereby \gls{DDPM} and rectified flow matching is discussed in depth due to their significant influence on widely known models such as Flux-dev \cite{Flux} or Stable Diffusion \cite{SD21, SDXL} which are partly used in this work.
+ Recently, a generalization of DMs was proposed, known as flow matching or Flow-based models \cite{RectifiedFlowMatching, FlowMatching}. Unlike classical diffusion, flow  matching models directly learn a vector field that defines the path between the noise distribution and the data distribution. By enforcing a straight path trajectory, the sampling process becomes computationally more efficient. This formulation was successfully applied in several new models like Flux-dev \cite{Flux} or Sana \cite{Sana}.\\
+ In the following, the different formulations of diffusion models, DDPM, DDIM, SGM and SDE, are presented folowed by an introduction to the concept of flow matching.
 
-\subsubsection{Denoising Diffusion Probabilistic Models}
-The discussion of \gls{DDPM} is based on the lecture notes form Inga Strümke and Helge Langseth \cite{LectureNotesDDPM} if not stated otherwise. \\
-In \gls{DDPM}s \cite{DDPM} the forward and reverse process are modeled as Markov Chains, meaning that each step only depends on the immediate previous step. 
-This key concept is illustrated in fig. \ref{GraphicalModelDDPM}. Let $\mathbf{x}_0,...\mathbf{x}_T$ be the states of the Markov Chain with $\mathbf{x}_0$ representing the clean image and $\mathbf{x}_T$ representing pure noise, then one step of the reverse process is given by $p_\theta(\mathbf{x}_{t-1}|\mathbf{x}_t)$. This shows that the slightly denoised state $\mathbf{x}_{t-1}$ just depends on state $\mathbf{x}_t$ and $\theta$ denotes the parameters of the trained diffusion models which is used to predict $\mathbf{x}_{t-1}$. The forward process, which progressively adds noise proceeds from left to right in  fig. \ref{GraphicalModelDDPM} and is given by $q(\mathbf{x}_t |\mathbf{x}_{t-1})$ where no learned parameters are required.
+
+\subsection{Denoising Diffusion Probabilistic Models}
+Unless stated otherwise, the discussion and mathematical formulations of \gls{DDPM} presented in this chapter are based on the lecture notes by Inga Strümke and Helge Langseth \cite{LectureNotesDDPM}. \\
+In \gls{DDPM}s \cite{DDPM} the forward and reverse process are modeled as Markov Chain (\gls{MC}), meaning that each step only depends on the immediate previous step. 
+This key concept is illustrated in fig. \ref{GraphicalModelDDPM}. Let $\mathbf{x}_0,...\mathbf{x}_T$ be the states of the \gls{MC} with $\mathbf{x}_0$ representing the clean image and $\mathbf{x}_T$ representing pure noise, then one step of the reverse process is given by $p_\theta(\mathbf{x}_{t-1}|\mathbf{x}_t)$. This shows that the slightly denoised state $\mathbf{x}_{t-1}$ just depends on state $\mathbf{x}_t$ and $\theta$ denotes the parameters of the trained diffusion model being used to predict $\mathbf{x}_{t-1}$. The forward process, which progressively adds noise proceeds from right to left in  fig. \ref{GraphicalModelDDPM} and is given by $q(\mathbf{x}_t |\mathbf{x}_{t-1})$ where no learned parameters are required.
 
 \begin{figure}[H]
     \centering
@@ -18,21 +20,33 @@ This key concept is illustrated in fig. \ref{GraphicalModelDDPM}. Let $\mathbf{x
     \label{GraphicalModelDDPM}
 \end{figure}
 
-\paragraph{Forward Process}
-In the forward process, noise is gradually added to the original data to transform the data distribution $ p_{\text{data}}$ to a new often simpler distribution $p_{\text{prior}}$, such that for a large number of steps $T$, approximately  $\mathbf{x}_T \sim p_{\text{prior}}$ holds. It is important that this approximation holds because during the generation process, a sample from $p_\text{prior}$ is drawn and the process is reversed. To add the right amount of noise at every step and ensure a smooth transition between $p_\text{data}$  and $p_\text{prior}$, being crucial for the performance of the diffusion model in the reverse process, a variance schedule needs to be defined $\{ \beta_t\}_{t=1}^T$, e.g., a linear \cite{DDPM}, a cosine \cite{ImprovedDDPM} or a learnable \cite{VDM} schedule. Normally, the variance schedule is chosen such that the variance $\beta_t$ is small for early steps $t$ which provides a gradual corruption of the input data. Concretely, the next state $\mathbf{x}_t$ within the Markov Chain is computed by 
+\subsubsection{Forward Process}
+Formally, the forward process is defined as a \gls{MC} that progressively injects noise into the clean image $\mathbf{x}_0\sim p_{\text{data}}$ which is transformed such that for a large number of steps $T$ the final latent variable $\mathbf{x}_T$ approximately follows a new often simpler prior distribution $p_{\text{prior}}$. This boundary condition is necessary so that in the reverse process, which starts with a sample of $p_{\text{prior}}$, the model is able to transfer it back to the image domain $p_{\text{data}}$. The transformation is governed by a variance schedule $\{ \beta_t\}_{t=1}^T$, e.g., a linear \cite{DDPM}, a cosine \cite{ImprovedDDPM} or a learnable \cite{VDM} schedule, to ensure smooth interpolation between $p_{\text{prior}}$ and $p_{\text{data}}$. The schedule dictates the incremental increase of variance $\beta_t$.
+
+
+Concretely, the next state $\mathbf{x}_t$ within the \gls{MC} is computed by 
 \begin{equation}
     q(\mathbf{x}_t | \mathbf{x}_{t-1}) = K(\mathbf{x}_t; \mathbf{x}_{t-1}, \beta_t)
 \end{equation}
 
-with the Markov kernel $K$, which is chosen as a Gaussian Markov diffusion kernel  in DDPM. The joint probability of the entire sequence $\mathbf{x}_{1:T}$, given a sampled $\mathbf{x}_0$ from the data distribution, is obtained by 
-\begin{equation}
-    q \left(\mathbf{x}_{1:T}|\mathbf{x}_0 \right) =\prod_{t=1}^T q \left(\mathbf{x}_t | \mathbf{x}_{t-1} \right)
-\end{equation}
-As a Gaussian kernel is chosen the explicit form of $q \left(\mathbf{x}_t | \mathbf{x}_{t-1} \right)$ is given by 
+with the Markov kernel $K$, which is chosen as a Gaussian Markov diffusion kernel  in DDPM leading to the explicit form 
+
+%The joint probability of the entire sequence $\mathbf{x}_{1:T}$, given a sampled $\mathbf{x}_0$ from the data distribution, is obtained by 
+%\begin{equation}
+%    q \left(\mathbf{x}_{1:T}|\mathbf{x}_0 \right) =\prod_{t=1}^T q \left(\mathbf{x}_t | \mathbf{x}_{t-1} \right) \quad.
+%\end{equation}
+%As a Gaussian kernel is chosen the explicit form of $q \left(\mathbf{x}_t | \mathbf{x}_{t-1} \right)$ is given by 
 \begin{equation}
     q \left(\mathbf{x}_t | \mathbf{x}_{t-1} \right) := \mathcal{N} \left( \mathbf{x}_t; \sqrt{1-\beta_t}\mathbf{x}_{t-1}, \beta_t \mathbf{I} \right)
 \end{equation}
-which leads to the prior distribution $p_\text{prior}(\mathbf{x}) = \mathcal{N}(\mathbf{x}; \mathbf{0}, \mathbf{I)}$. A property of this formulation is that there is a closed-form solution for every $\mathbf{x}_t$ in the Markov Chain. In general, sampling from a Gaussian distribution with mean $\boldsymbol{\mu}$ and covariance $\mathbf{\Sigma}$ can be achieved by $\mathbf{x} = \boldsymbol{\mu} + \mathbf{A}\mathbf{z}$ with $\mathbf{z} \sim \mathcal{N}(\mathbf{0},\mathbf{I})$ and $\mathbf{\Sigma = \mathbf{A}\mathbf{A}}^T$. Defining $\alpha_t = 1 - \beta_t$ and setting $\mathbf{A} = \sqrt{1-\alpha_t} \mathbf{I}$ any $\mathbf{x}_t$ of the Markov chain can be computed by 
+
+
+
+and the prior distribution $p_\text{prior}(\mathbf{x}) = \mathcal{N}(\mathbf{x}; \mathbf{0}, \mathbf{I})$.
+
+% A property of this formulation is that there is a closed-form solution for every $\mathbf{x}_t$ in the \gls{MC}. In general, sampling from a Gaussian distribution with mean $\boldsymbol{\mu}$ and covariance $\mathbf{\Sigma}$ can be achieved by $\mathbf{x} = \boldsymbol{\mu} + \mathbf{A}\mathbf{z}$ with $\mathbf{z} \sim \mathcal{N}(\mathbf{0},\mathbf{I})$ and $\mathbf{\Sigma = \mathbf{A}\mathbf{A}}^T$. Defining $\alpha_t = 1 - \beta_t$ and setting $\mathbf{A} = \sqrt{1-\alpha_t} \mathbf{I}$ any $\mathbf{x}_t$ of the \gls{MC} can be computed by 
+
+A key property of this Gaussian formulation is the existence of a closed-form expression for sampling any $\mathbf{x}_{t}$.  At every timestep $t$ the intermediate latent variable is computed by
 \begin{align}
 \mathbf{x}_t &= \sqrt{\alpha_t} \, \mathbf{x}_{t-1} + \sqrt{1 - \alpha_t} \, \mathbf{z}_t \\
              &= \sqrt{\alpha_t \alpha_{t-1}} \, \mathbf{x}_{t-2} + \sqrt{\alpha_t (1 - \alpha_{t-1})} \, \mathbf{z}_{t-1} + \sqrt{1 - \alpha_t} \, \mathbf{z}_t \\
@@ -44,7 +58,7 @@ where $\bar{\alpha}_t = \prod_{s=1}^t \alpha_s$ which shows that $q(\mathbf{x}_t
 \begin{equation}
      q(\mathbf{x}_t | \mathbf{x}_{0}) = \mathcal{N} \left( \mathbf{x_t};\sqrt{\bar{\alpha}_t} \mathbf{x_0}, (1- \bar{\alpha}_t)\mathbf{I}  \right)
 \end{equation}
-This discussion underlines that during the forward process the mean of $\mathbf{x}_t$ is gradually moved towards zero and the variance increases towards one. Therefore, the closed-form solution for $\mathbf{x}_t$ is 
+This underlines that during the forward process the mean of $\mathbf{x}_t$ is gradually moved towards zero and the variance increases towards one. Therefore, the closed-form solution for $\mathbf{x}_t$ is 
 
 \begin{equation}
     \mathbf{x_t} =  \sqrt{\bar{\alpha}_t} \mathbf{x_0} + \sqrt{(1- \bar{\alpha}_t)} \boldsymbol{\epsilon}
@@ -53,8 +67,8 @@ This discussion underlines that during the forward process the mean of $\mathbf{
 with $\boldsymbol{\epsilon} \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$. This possibility to directly sample every $\mathbf{x}_t$ is crucial for efficient training.
 
 
-\paragraph{Reverse Process } 
-The reverse process recovers the clear image by iteratively removing noise. The authors of \cite{feller1949stochastic} showed that in the limit of infinitesimal small steps the reverse process has the same distributional from as the forward process, a Gaussian. Particularly, in the reverse process $q(\mathbf{x}_{t-1}| \mathbf{x}_t)$ is the quantity of interest. However, it is not tractable due to 
+\subsubsection{Reverse Process } 
+The reverse process recovers the clear image by iteratively removing noise. The authors of \cite{feller1949stochastic} showed that in the limit of infinitesimal small steps the reverse process has the same distributional form as the forward process, a Gaussian. Particularly, in the reverse process $q(\mathbf{x}_{t-1}| \mathbf{x}_t)$ is the quantity of interest. However, it is not tractable due to 
 \begin{equation}
     q(\mathbf{x}_{t-1}| \mathbf{x}_t) = q(\mathbf{x}_{t}| \mathbf{x}_{t-1}) \frac{q(\mathbf{x}_{t-1})}{q(\mathbf{x}_t)}
 \end{equation}
@@ -62,13 +76,13 @@ using Bayes law where $q(\mathbf{x}_{t-1})$ and $q(\mathbf{x}_t)$ are marginal d
 \begin{equation}
     p_\theta(\mathbf{x}_{1:T} |\mathbf{x}_0) = p(\mathbf{x}_T) \prod_{t=1}^T p_\theta(\mathbf{x}_{t-1} | \mathbf{x}_t)
 \end{equation}
-where $p(\mathbf{x}_T) = $ is pure noise and $p_\theta(\mathbf{x}_{t-1}|\mathbf{x}_t)$ is a gaussian with learned mean and covariance 
+where $p(\mathbf{x}_T) = $ is pure noise and $p_\theta(\mathbf{x}_{t-1}|\mathbf{x}_t)$ is a Gaussian with learned mean and covariance 
 \begin{equation}
     p_\theta(\mathbf{x}_{t-1}|\mathbf{x}_t) = \mathcal{N}\left( \mathbf{x}_{t-1}; \boldsymbol{\mu}_\theta(\mathbf{x}_t,t), \boldsymbol{\Sigma}_\theta(\mathbf{x}_t,t)  \right)
 \end{equation}
-As seen in the forward process, the variance of the noise follows a predefined schedule which means that the neural network just has to learn the mean $\boldsymbol{\mu}_\theta(\mathbf{x}_t,t)$ and the variance is fixed by $\boldsymbol{\Sigma}_\theta(\mathbf{x}_t,t) = \sigma_t^2 \mathbf{I}$.
+As seen in the forward process, the variance of the noise follows a predefined schedule which means that the neural network just has to learn the mean $\boldsymbol{\mu}_\theta(\mathbf{x}_t,t)$ and the variance is fixed by $\boldsymbol{\Sigma}_\theta(\mathbf{x}_t,t) = \sigma_t^2 \mathbf{I}$ \quad..
 
-\paragraph{Objective Function} Diffusion models belong to the class of probabilistic generative models. A natural choice for the objective of these models is the negative log-likelihood $- \log p_\theta(\mathbf{x}_0)$. As discussed in sec. \ref{VariationaAutoEncoder} the likelihood is not always tractable. Therefore, the \gls{ELBO} loss is used as learning objective. In the following the \gls{ELBO} loss is derived for diffusion models. This derivation is mainly based on \cite{pawlowski2024physics} and \cite{DDPM}. Starting with the expectation of the negative log-likelihood
+\subsubsection{Objective Function} Diffusion models belong to the class of probabilistic generative models. A natural choice for the objective of these models is the negative log-likelihood $- \log p_\theta(\mathbf{x}_0)$. As discussed in sec. \ref{VariationaAutoEncoder} the likelihood is not always tractable. Therefore, the \gls{ELBO} loss is used as learning objective. In the following the \gls{ELBO} loss is derived for diffusion models. This derivation is mainly based on \cite{pawlowski2024physics} and \cite{DDPM}. Starting with the expectation of the negative log-likelihood
 
 % \begin{align}
 % - \mathbb{E}_{q(x_0)} \left[ \log p_\theta(x_0) \right] 
@@ -111,7 +125,7 @@ using Jensen's inequality
     & =: \mathcal{L}_{\text{DDPM}}
 \end{align}
 
-one obtains the loss for training a diffusion model. This can be further transformed
+one obtains the loss for training a diffusion model. This can be further transformed to
 
 % \begin{align}
 %     \mathcal{L} &= \mathbb{E}_{q(x_0,\dots,x_T)} \left[ -\log  p(x_T) - \sum_{t=2}^T  \log  \frac{p_\theta(x_{t-1} \mid x_t)}{q(x_t \mid x_{t-1})}  - \log   \frac{p_\theta(x_{0} \mid x_1)}{q(x_1 \mid x_{0})}  \right] \\
@@ -149,7 +163,7 @@ one obtains the loss for training a diffusion model. This can be further transfo
 \right. \notag \\
 &\quad \left. 
     - \log p_\theta(\mathbf{x}_0 \mid \mathbf{x}_1) 
-\right]
+\right] \quad.
 \end{align}
 
 
@@ -170,7 +184,7 @@ For training, only non-constant terms are relevant. That is why the loss further
 
 assuming that the term $\mathbb{E}_{q(\mathbf{x}_0,\dots,\mathbf{x}_T)} \left[\log p_\theta(\mathbf{x}_0 \mid \mathbf{x}_1) \right]$ is negligible. Note that in eq. \ref{FinalDiffLoss} only Gaussians, $p_\theta(\mathbf{x}_{t-1} \mid \mathbf{x}_t) = \mathcal{N}\left( \mathbf{x}_{t-1}; \mu_\theta(\mathbf{x}_t,t),\Sigma_\theta(\mathbf{x}_t,t) \right)$  with $\Sigma_\theta(\mathbf{x}_t,t) = \sigma_t^2 \mathbf{I}$ and $q(\mathbf{x}_{t-1} \mid \mathbf{x}_t, \mathbf{x}_0) = \mathcal{N} \left( \mathbf{x}_{t-1}; \hat{\mu}(\mathbf{x}_t,\mathbf{x}_0), \hat{\beta}_t \mathbf{I}  \right)$ are compared in the \gls{KL}-divergence meaning there is a closed-form solution. The loss for the diffusion model boils down to 
 \begin{equation}
-    \mathcal{L}_{\text{DDPM}} = \sum_{t=2}^T \mathbb{E}_{q(\mathbf{x}_0,\mathbf{x}_t)} \left[ \frac{1}{2\sigma^2} || \hat{\mu}(\mathbf{x}_t, \mathbf{x}_0) - \mu_\theta(\mathbf{x}_t,t) ||^2  \right]
+    \mathcal{L}_{\text{DDPM}} = \sum_{t=2}^T \mathbb{E}_{q(\mathbf{x}_0,\mathbf{x}_t)} \left[ \frac{1}{2\sigma^2} || \hat{\mu}(\mathbf{x}_t, \mathbf{x}_0) - \mu_\theta(\mathbf{x}_t,t) ||^2  \right] \quad.
     \label{MeanLossDiffModel}
 \end{equation}
 The mean and the variance of the forward process $\hat{\mu}$ is obtained by 
@@ -179,7 +193,7 @@ The mean and the variance of the forward process $\hat{\mu}$ is obtained by
 \end{equation}
 
 \begin{equation}
-    \hat{\beta}_t := \frac{1 - \bar{\alpha}_{t-1}}{1 - \bar{\alpha}_t} \beta_t
+    \hat{\beta}_t := \frac{1 - \bar{\alpha}_{t-1}}{1 - \bar{\alpha}_t} \beta_t \quad.
 \end{equation}
 However, instead of predicting the mean, diffusion models are more often trained on predicting the noise $\boldsymbol{\epsilon}_\theta$  because \cite{DDPM} empirically found that this lead to more stable training 
 
@@ -189,7 +203,7 @@ However, instead of predicting the mean, diffusion models are more often trained
 \end{equation}
 which is achieved by reparameterization of eq. \ref{MeanLossDiffModel} via 
 \begin{equation}
-    \hat{\mu}(\mathbf{x}_t, \mathbf{x}_0) = \frac{1}{\sqrt{\alpha_t}} \left( \mathbf{x}_t - \frac{1-\alpha_t}{\sqrt{1-\hat{\alpha_t}}}\boldsymbol{\epsilon}_t  \right)
+    \hat{\mu}(\mathbf{x}_t, \mathbf{x}_0) = \frac{1}{\sqrt{\alpha_t}} \left( \mathbf{x}_t - \frac{1-\alpha_t}{\sqrt{1-\hat{\alpha_t}}}\boldsymbol{\epsilon}_t  \right) \quad.
 \end{equation}
 
 
@@ -200,7 +214,7 @@ In addition, they found empirically that ignoring the weighting term of eq. \ref
 \end{equation}
 
 
-\paragraph{DDPM Sampler} The training process of the \gls{DDPM} approach is depicted in algorithm \ref{AlogDDPMTraining} and fig. \ref{FigDDPMTraining}). In each training iteration, an image $\mathbf{x}_0 \sim p_\text{data}$ is sampled from the data distribution. Next, a timestep $t$ is uniformly sampled from a predefined interval $[0,...,T]$ and Gaussian noise is drawn according to $\boldsymbol{\epsilon} \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$. Using eq. \ref{x_t} the noisy image $\mathbf{x}_t$ at timestep $t$ is computed. The diffusion model is applied to predict the noise from this noisy input, and the loss function (eq.  \ref{NoiseLoss}) measures the difference between the predicted and true noise. Finally, the model parameters are updated using gradient descent or a more advanced iterative optimization algorithms. \\
+\subsubsection{DDPM Sampler}  Algorithm \ref{AlogDDPMTraining} and fig. \ref{FigDDPMTraining} depict the training process of the DDPM approach. In each training iteration, an image $\mathbf{x}_0 \sim p_\text{data}$ is sampled from the data distribution. Next, a timestep $t$ is uniformly sampled from a predefined interval $[0,...,T]$ and Gaussian noise is drawn according to $\boldsymbol{\epsilon} \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$. Using eq. \ref{x_t} the noisy image $\mathbf{x}_t$ at timestep $t$ is computed. The diffusion model is applied to predict the noise from this noisy input, and the loss function (eq.  \ref{NoiseLoss}) measures the difference between the predicted and true noise. Finally, the model parameters are updated using gradient descent or a more advanced iterative optimization algorithms. \\
 
 
 
@@ -226,15 +240,15 @@ In addition, they found empirically that ignoring the weighting term of eq. \ref
 \end{figure}
 
 
-Algorithm \ref{AlogDDPMSampling} and fig. \ref{FigDDPMSampling} show schematically the sampling process which reverses the diffusion process to generate images form noise. Starting with pure Gaussian noise $\mathbf{x}_T \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$, the process iteratively denoises the image. At each timestep $t$, the slightly denoised image $\mathbf{x}_{t-1}$ is computed using
+Algorithm \ref{AlogDDPMSampling} and fig. \ref{FigDDPMSampling} show schematically the sampling process which reverses the diffusion process to generate images from noise. Starting with pure Gaussian noise $\mathbf{x}_T \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$, the process iteratively denoises the image. At each timestep $t$, the slightly denoised image $\mathbf{x}_{t-1}$ is computed using
 \begin{equation}
-    x_{t-1} = \frac{1}{\sqrt{\alpha_t}} \left(  x_t - \frac{1-\alpha_t}{\sqrt{1-\bar{\alpha}_t}} \boldsymbol{\epsilon}_\theta(x_t,t)  \right) + \sigma_t \mathbf{z}
+    \mathbf{x}_{t-1} = \frac{1}{\sqrt{\alpha_t}} \left(  \mathbf{x}_t - \frac{1-\alpha_t}{\sqrt{1-\bar{\alpha}_t}} \boldsymbol{\epsilon}_\theta(\mathbf{x}_t,t)  \right) + \sigma_t \mathbf{z}
 \end{equation}
 until $t=2$. In the last step, the final clear images is obtained by 
 \begin{equation}
     \mathbf{x}_{0} = \frac{1}{\sqrt{\alpha_1}} \left(  \mathbf{x}_1 - \frac{1-\alpha_1}{\sqrt{1-\bar{\alpha}_1}} \boldsymbol{\epsilon}_\theta(\mathbf{x}_1,1)  \right) + \sigma_1 \mathbf{z}
 \end{equation}
-Here, it becomes clear that the model has to predict the noise $T$ times which makes inference of such diffusion model slow.
+Here, it becomes clear that the model has to predict the noise $T$ times which makes inference of such a diffusion model slow.
 
 
 
@@ -268,13 +282,13 @@ Here, it becomes clear that the model has to predict the noise $T$ times which m
     \label{FigDDPMSampling}
 \end{figure}
 
-\paragraph{Denoising Diffusion Implict Models}
+\subsection{Denoising Diffusion Implict Models}
 The \gls{DDPM} sampling process can be accelerated by replacing the Markovian diffusion process with a non-Markovian alternative resulting in denoising diffusion implicit models (\gls{DDIM}s) \cite{DDIM}. Unlike \gls{DDPM}, \gls{DDIM} defines the joint distribution as 
 \begin{equation}
-    q(\mathbf{x}_{1:T} \mid \mathbf{x}_0) = q(\mathbf{x}_T  \mid \mathbf{x}_0) \prod_{t=2}^T q(\mathbf{x}_{t-1} \mid \mathbf{x}_t, \mathbf{x}_0)
+    q(\mathbf{x}_{1:T} \mid \mathbf{x}_0) = q(\mathbf{x}_T  \mid \mathbf{x}_0) \prod_{t=2}^T q(\mathbf{x}_{t-1} \mid \mathbf{x}_t, \mathbf{x}_0) \quad.
 \end{equation}
 
-It becomes clear that the forward process $q(\mathbf{x}_t \mid \mathbf{x}_{t-1}, \mathbf{x}_0)$ is not Markovian anymore due to its explicit dependence on $\mathbf{x}_0$. The authors of \cite{DDIM} parameterize the reverse process
+It becomes clear that the forward process $q(\mathbf{x}_t \mid \mathbf{x}_{t-1}, \mathbf{x}_0)$ is not Markovian anymore due to its explicit dependence on $\mathbf{x}_0$. The authors of \cite{DDIM} parameterize the reverse process as
 
 \begin{equation}
 q(\mathbf{x}_{t-1} \mid \mathbf{x}_t, \mathbf{x}_0) = 
@@ -284,22 +298,22 @@ q(\mathbf{x}_{t-1} \mid \mathbf{x}_t, \mathbf{x}_0) =
 \sqrt{1 - \bar{\alpha}_{t-1} - \tilde{\sigma}_t^2} \cdot 
 \frac{\mathbf{x}_t - \sqrt{\bar{\alpha}_t} \mathbf{x}_0}{\sqrt{1 - \bar{\alpha}_t}}, 
 \tilde{\sigma}_t^2 \cdot \mathbf{I}
-\right)
+\right) \quad.
 \end{equation}
 The corresponding sampling equation becomes
 \begin{equation}
 \mathbf{x}_{t-1} = \underbrace{\frac{1}{\sqrt{\alpha_t}} \left(\mathbf{x}_t - \sqrt{1 - \bar{\alpha}_t} \cdot \boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t)\right)}_{\text{Predicted } \mathbf{x}_0} + \underbrace{\sqrt{1 - \bar{\alpha}_{t-1} - \tilde{\sigma}_t^2} \cdot \boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t)}_{\text{Direction of } \mathbf{x}_t} + \underbrace{\tilde{\sigma}_t \cdot \mathbf{z}}_{\text{Noise}}
 \label{DDIM_Sampler}
 \end{equation}
-where $\tilde{\sigma}_t$ is a parameter to choose and does not necessarily follow a predefined variance schedule. $\mathbf{x}_{t-1}$ consists of three parts. The first part is a prediction of $\mathbf{x}_0$ based on $\boldsymbol{\epsilon}_\theta$. The second part is a directional term describing the transition between $\mathbf{x}_t$ and $\mathbf{x}_0$. And the last part adds Gaussian noise scaled by $\tilde{\sigma}_t$. 
+where $\tilde{\sigma}_t$ is a parameter to choose. $\mathbf{x}_{t-1}$ consists of three parts. The first part is a prediction of $\mathbf{x}_0$ based on $\boldsymbol{\epsilon}_\theta$. The second part is a directional term describing the transition between $\mathbf{x}_t$ and $\mathbf{x}_0$. And the last part adds Gaussian noise scaled by $\tilde{\sigma}_t$. 
 The key advantage of \gls{DDIM} is the flexibility in choosing $\tilde{\sigma}_t$, which does not need to follow a predefined variance schedule. Different values of $\tilde{\sigma}_t$ yield different diffusion processes while using the same trained model. In particular, for the choice 
 \begin{equation}
 \sigma_t = \sqrt{\frac{1 - \bar{\alpha}_{t-1}}{1 - \bar{\alpha}_t}} \sqrt{1 - \frac{\bar{\alpha}_t}{\bar{\alpha}_{t-1}}}
 \end{equation}
-the \gls{DDIM} approach becomes Markovian again and here, the deep connection between \gls{DDPM} and \gls{DDIM} can be seen. Another aspect to note is that if setting $\tilde{\sigma} = 0$ the whole process become deterministic.
+the \gls{DDIM} approach becomes Markovian again and here, the deep connection between \gls{DDPM} and \gls{DDIM} can be seen. Another aspect to note is that if setting $\tilde{\sigma} = 0$ the whole process becomes deterministic.
 
 
-\subsubsection{Scored-Based Generative Models}
+\subsection{Scored-Based Generative Models}
 This disscussion is mainly based on \cite{Survey2, SurveyDM}.
 Score-Based Generative Models (\gls{SGM}s) \cite{IntroSGM, ImprovedSGMs} do not learn directly the data distribution $p_\text{data}(\mathbf{x})$ but the score of the probability function $\nabla_x \log p_\text{data}(\mathbf{x})$. The score represents a vector field that points to the steepest increase in log probability density, thereby, guiding the data generation process to regions of higher data density. There are several approaches on how the score function can be learned \cite{ScoreBasedODE, SteinDiscrepancy, SlicedScoreMatching}. Here, the one closest to the \gls{DDPM} approach is presented \cite{IntroSGM}. During training, the data is perturbed by Gaussian noise at different noise levels and a neural network is trained to estimate the score function based on the noise level $s_\theta(\mathbf{x}_t, t) \approx \nabla_{\mathbf{x}_t} \log q(x_t)$. These networks are called Noise-Conditional Score Networks (\gls{NCSN}s). The learning objective boils down to 
 
@@ -320,7 +334,7 @@ For sampling a new element from the data distribution \cite{IntroSGM} proposed A
 with $\mathbf{z}_t \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$ and $\alpha$ regulates the step size of the update in the direction of the score. By applying eq. \ref{SamplingSGM} iteratively to initial Gaussian noise, a new element of the data distribution is generated.
 
 
-\subsubsection{Stochastic Differential Equations}
+\subsection{Stochastic Differential Equations}
 This discussion is mainly based on \cite{Survey2, SurveyDM}.
 Stochastic Differential Equations (\gls{SDE}s) \cite{ScoreBasedODE} are a generalization of \gls{SGM}s and \gls{DDPM}s to continuous time where the forward and the reverse process are modeled by the solution of stochastic differential equations. The forward process is described by the \gls{SDE}
 \begin{equation}
@@ -345,7 +359,7 @@ Both reversed-\gls{SDE} or probability flow \gls{ODE} can be used to generate ne
 
 
 
-\subsubsection{Flow Matching}
+\subsection{Flow Matching}
 The concept of flow matching was introduced for normalizing flows \cite{FlowMatching} to find transport trajectories between two probability distributions. In contrast to diffusion models, which follows a noisy trajectory flow matching directly learns a probability path $p(t,x)$ connecting two distributions $\pi_1$ and $\pi_2$. In particular, the corresponding vector field $u(t,x)$, often referred to as velocity, that generates the probability path is learned via the flow matching loss function 
 \begin{equation}
     \mathcal{L}_{\text{FM}} = \mathbb{E}_{t \sim \mathcal{U}(0,1=), x \sim p(t,x)} \left[ \left\| v_\theta(t,x) - u(t,x) \right\|^2 \right]  
@@ -367,7 +381,7 @@ based on the conditional vector field $u(t,x \mid x_1)$ which generates the marg
 \end{equation}
 The key insight is that $\mathcal{L}_{\text{CFM}}$ leads to the same gradients w.r.t $\theta$ as $\mathcal{L}_{\text{FM}}$ and can actually be computed due to the tractable conditional vector field.
 
-\paragraph{Rectified Flow}
+\subsubsection{Rectified Flow}
 \cite{RectifiedFlowMatching} proposed rectified flow, a specialized variant of flow matching \cite{FlowMatching} that aims to straighten the trajectories between source and target distributions $\pi_0$ and $\pi_1$
 by iteratively refining the learned \gls{ODE}. This approach offers significant computational advantages, specifically, the straightened paths create a more direct mapping between distributions, making the velocity field easier to learn and enabling efficient sampling with as few as 1-2 Euler integration steps, compared to the 50-1000 steps typically required by diffusion models. \\ The \gls{ODE} of the rectified flow for $x_0 \sim \pi_0$ and $x_1 \sim \pi_1$ is given by 
 \begin{equation}
