--- a/theory_generative_models.tex
+++ b/theory_generative_models.tex
@@ -6,7 +6,7 @@ The principal idea of a generative model $f_\theta$ is to learn a mapping from a
 \end{equation}
 where the model's output distribution $p_{\text{model}}(\textbf{x})$ should approximate the true data distribution as closely as possible. 
 
-In the following, the main concepts of \gls{VAE}s, \gls{NF}s and \gls{GAN}s are briefly presented to provide a comprehensive overview followed by an extensive discussion of \gls{DM}s in chapter \ref{sec:diffModel} that are the most promising models today.
+In the following, the main concepts of \gls{VAE}s, \gls{NF}s and \gls{GAN}s are briefly presented to provide a comprehensive overview followed by an extensive discussion of diffusion and flow-based generativ models in chapter \ref{sec:diffModel} that are the most promising models today.
 
 
 \subsection{Variational Autoencoder}
